[package]
name = "configurator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
gettext-rs = {version = "0.7.0", features = ["gettext-system"]}
iced = "0.10.0"
iced_aw = "0.6.0"
iced_style = "0.9.0"
rfd = "0.12.0"
serde = "1.0.159"
serde_derive = "1.0.159"
toml = "0.7.3"
whoami = "1.4.0"

[[bin]]
name = "cuttlefish"
path = "src/cuttlefish.rs"

[[bin]]
name = "sunfish"
path = "src/sunfish.rs"
